[sv-SE] update from Pootle (firefox)

--- a/sv-SE/browser/chrome/browser/devtools/canvasdebugger.properties
+++ b/sv-SE/browser/chrome/browser/devtools/canvasdebugger.properties
@@ -59,7 +59,7 @@ snapshotsList.saveDialogTitle=Spara ögonblicksbild av animeringsruta
 
 # LOCALIZATION NOTE (snapshotsList.saveDialogJSONFilter):
 # This string is displayed as a filter for saving a snapshot to disk.
-snapshotsList.saveDialogJSONFilter=JSON Filer 
+snapshotsList.saveDialogJSONFilter=JSON Filer\u0020
 
 # LOCALIZATION NOTE (snapshotsList.saveDialogAllFilter):
 # This string is displayed as a filter for saving a snapshot to disk.
