--- a/sv-SE/browser/chrome/browser/devtools/gclicommands.properties
+++ b/sv-SE/browser/chrome/browser/devtools/gclicommands.properties
@@ -175,7 +175,7 @@ highlightShowInfoBarManual=Visa infofält ovanför den markerade noden (infofäl
 # LOCALIZATION NOTE (highlightShowAllDesc) A very short string to describe
 # the 'showall' option parameter to the 'highlight' command, which is
 # displayed in a dialog when the user is using this command.
-highlightShowAllDesc=Visa alla träffar 
+highlightShowAllDesc=Visa alla träffar\u0020
 
 # LOCALIZATION NOTE (highlightShowAllManual) A fuller description of the
 # 'showall' option parameter to the 'highlight' command, displayed when the
@@ -279,7 +279,7 @@ inspectNodeManual=En CSS-selektor som tillsammans med document.querySelector ide
 # command. See eyedropperManual for a fuller description of what it does. This
 # string is designed to be shown in a menu alongside the command name, which
 # is why it should be as short as possible.
-eyedropperDesc=Välj en färg från sidan 
+eyedropperDesc=Välj en färg från sidan\u0020
 
 # LOCALIZATION NOTE (eyedropperManual) A fuller description of the 'eyedropper'
 # command, displayed when the user asks for help on what it does.
@@ -287,7 +287,7 @@ eyedropperManual=Öppna en panel som förstorar ett område av sidan för att in
 
 # LOCALIZATION NOTE (eyedropperTooltip) A string displayed as the
 # tooltip of button in devtools toolbox which toggles the Eyedropper tool.
-eyedropperTooltip=Dra en färg från sidan 
+eyedropperTooltip=Dra en färg från sidan\u0020
 
 # LOCALIZATION NOTE (tiltDesc) A very short description of the 'tilt'
 # command. See tiltManual for a fuller description of what it does. This
@@ -1514,7 +1514,7 @@ injectFailed=Misslyckades att ladda %1$S - Ogiltig URI
 folderDesc=Öppna mappar
 folderOpenDesc=Öppna mappsökväg
 folderOpenDir=Katalogsökväg
-folderOpenProfileDesc=Öppna profil katalog 
+folderOpenProfileDesc=Öppna profil katalog\u0020
 
 # LOCALIZATION NOTE (folderInvalidPath) A string displayed as the result
 # of the 'folder open' command with an invalid folder path.
