--- a/sv-SE/browser/chrome/browser/devtools/inspector.properties
+++ b/sv-SE/browser/chrome/browser/devtools/inspector.properties
@@ -33,9 +33,9 @@ nodeMenu.tooltiptext=Nodåtgärder
 
 # LOCALIZATION NOTE (inspector.*)
 # Used for the menuitem in the tool menu
-inspector.label=&Inspekterare
+inspector.label=Inspekterare
 inspector.commandkey=C
-inspector.accesskey=&Inspekterare
+inspector.accesskey=I
 
 # LOCALIZATION NOTE (inspector.panelLabel.*)
 # Labels applied to the panel and views within the panel in the toolbox
