--- a/sv-SE/browser/chrome/browser/devtools/netmonitor.properties
+++ b/sv-SE/browser/chrome/browser/devtools/netmonitor.properties
@@ -13,7 +13,7 @@
 # LOCALIZATION NOTE (netmonitor.label):
 # This string is displayed in the title of the tab when the Network Monitor is
 # displayed inside the developer tools window and in the Developer Tools Menu.
-netmonitor.label=&Nätverk
+netmonitor.label=Nätverk
 
 # LOCALIZATION NOTE (netmonitor.panelLabel):
 # This is used as the label for the toolbox panel.
@@ -22,7 +22,7 @@ netmonitor.panelLabel=Nätverkspanel
 # LOCALIZATION NOTE (netmonitor.commandkey, netmonitor.accesskey)
 # Used for the menuitem in the tool menu
 netmonitor.commandkey=Q
-netmonitor.accesskey=&Nätverk
+netmonitor.accesskey=N
 
 # LOCALIZATION NOTE (netmonitor.tooltip):
 # This string is displayed in the tooltip of the tab when the Network Monitor is
