--- a/sv-SE/browser/chrome/browser/preferences/preferences.properties
+++ b/sv-SE/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=Följande kakor lagras på datorn:
 cookiesFiltered=Följande kakor matchar din sökning:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Ta bort nedkopplad webbplatsdata
 offlineAppRemovePrompt=Tar du bort denna data kommer %S inte att vara tillgänglig när du är nedkopplad.  Är du säker på att du vill ta bort denna nedkopplade webbplats?
 offlineAppRemoveConfirm=Ta bort lagrad data
@@ -125,8 +126,8 @@ actualAppCacheSize=Programcachen använder nu %1$S %2$S diskutrymme
 
 ###Preferences::Advanced::Update
 #LOCALIZATION NOTE: The next string is for updating in Windows 8 only instead of updateAuto1.label.  %S = brandShortName
-updateAutoDesktop.label=&Automatiskt installera uppdateringar från skrivbordet %S 
-updateAutoDesktop.accessKey=&Automatiskt installera uppdateringar från skrivbordet %S 
+updateAutoDesktop.label=Automatiskt installera uppdateringar från skrivbordet %S\u0020
+updateAutoDesktop.accessKey=A
 
 syncUnlink.title=Vill du avregistrera den här enheten?
 syncUnlink.label=Den här enheten kommer inte längre att vara kopplad till ditt Sync-konto. All personlig data, både på den här enheten och på ditt Sync-konto, kommer att bevaras.
