--- a/sv-SE/dom/chrome/dom/dom.properties
+++ b/sv-SE/dom/chrome/dom/dom.properties
@@ -156,7 +156,7 @@ DataContainerEventWarning=Användning av DataContainerEvent är förlegad. Anvä
 # LOCALIZATION NOTE: Do not translate "sendAsBinary" or "send(Blob data)"
 SendAsBinaryWarning=Den icke-standardiserade metoden mozGetAsFile är förlegad och kommer snart att tas bort. Använd standardmetoden toBlob i stället.
 # LOCALIZATION NOTE: Do not translate "window.controllers"
-Window_ControllersWarning=window.controllers är förlegade. Använd det inte för UA detektering. 
+Window_ControllersWarning=window.controllers är förlegade. Använd det inte för UA detektering.\u0020
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Down" and "ArrowDown".
 KeyNameDownWarning=KeyboardEvent.key-värdet "Down" är förlegat och kommer byta namn till "ArrowDown". För mer hjälp https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Left" and "ArrowLeft".
@@ -208,3 +208,4 @@ KeyNameZoomWarning=KeyboardEvent.key-värdet "Zoom" is förlegat och kommer byta
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
 KeyNameDeadKeysWarning=KeyboardEvent.key-värden som börjar med "Dead" är förlegade och kommer slås ihop till enbart "Dead". För mer hjälp https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Att importera XUL-noder till ett innehållsdokument är förlegat. Denna funktionalitet kan komma tas bort inom kort.
+XMLDocumentLoadPrincipalMismatch=Användning av document.load är förbjudet på dokument som kommer från andra fönster. Endast fönster i vilket ett dokument skapades tillåts anropa .load på det dokument. Använd hellre XMLHttpRequest istället.\u0020
