--- a/sv-SE/dom/chrome/layout/css.properties
+++ b/sv-SE/dom/chrome/layout/css.properties
@@ -53,7 +53,7 @@ PECounterStyleEOF=avslutande "}" för @counter-style-avsnitt
 PECounterDescExpected=Väntade sig en räknare-deskriptor, men fann ”%1$S”.
 PEUnknownCounterDesc=Okänd deskriptor ”%1$S” i @counter-style-regel.
 PECounterExtendsNotIdent=Väntade sig en identifierare för extends-algoritmen, men fann ”%1$S”.
-PECounterASWeight=Varje värde i beskrivningen av symboler för numrerad lista måste vara mindre än den föregående värdet. 
+PECounterASWeight=Varje värde i beskrivningen av symboler för numrerad lista måste vara mindre än den föregående värdet.\u0020
 PEClassSelEOF=klassnamn
 PEClassSelNotIdent=Väntade sig en identifierare för klasselektorn, men fann ”%1$S”.
 PETypeSelEOF=elementtyp
