--- a/sv-SE/security/manager/chrome/pippki/pippki.properties
+++ b/sv-SE/security/manager/chrome/pippki/pippki.properties
@@ -71,7 +71,7 @@ pageInfo_Identity_Verified=Webbplatsen %S stöder autentisering för sidan som v
 pageInfo_ViewCertificate=Visa certifikatet som verifierar denna webbplats identitet.
 pageInfo_NoEncryption=Anslutningen är ej krypterad
 pageInfo_Privacy_None1=Webbplatsen %S stöder inte kryptering av sidan som visas.
-pageInfo_Privacy_None2=Information som skickas över Internet utan kryptering kan under överföringen läsas av obehöriga personer. 
+pageInfo_Privacy_None2=Information som skickas över Internet utan kryptering kan under överföringen läsas av obehöriga personer.\u0020
 pageInfo_Privacy_None3=Sidan som visas är inte krypterad.
 # LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
@@ -132,9 +132,6 @@ importEmailCertPrompt=Välj en fil som innehåller det e-postcertifikat du vill 
 importCACertsPrompt=Välj en fil som innehåller det rotcertifikat du vill importera
 importServerCertPrompt=Välj en fil som innehåller det servercertifikat du vill importera
 file_browse_Certificate_spec=Certifikatfiler
-
-# Form Signing confirmation prompt
-formSigningIntro=Platsen ”%S” har begärt att du signerar följande textmeddelande:
 
 # Cert export
 SaveCertAs=Spara certifikat till fil
