--- a/sv-SE/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/sv-SE/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -57,7 +57,7 @@ notification.installError=Det uppstod ett fel vid installationen av %1$S.
 notification.installError.retry=Försök igen
 notification.installError.retry.tooltip=Försöker hämta och installera det här tillägget igen
 #LOCALIZATION NOTE (notification.openH264Pending) OpenH264 will be automatically installed later.
-notification.openH264Pending=Kommer installeras strax. 
+notification.openH264Pending=Kommer installeras strax.\u0020
 
 #LOCALIZATION NOTE (contributionAmount2) %S is the currency amount recommended for contributions
 contributionAmount2=Föreslaget bidrag: %S
@@ -106,16 +106,16 @@ details.notification.openH264Pending=Kommer installeras strax.
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of days from now that the experiment will remain active (detail view).
-details.experiment.time.daysRemaining=#1 dag kvar, #1 dagar kvar 
+details.experiment.time.daysRemaining=#1 dag kvar, #1 dagar kvar\u0020
 #LOCALIZATION NOTE (details.experiment.time.endsToday) The experiment will end in less than a day (detail view).
-details.experiment.time.endsToday=Mindre än en dag kvar 
+details.experiment.time.endsToday=Mindre än en dag kvar\u0020
 # LOCALIZATION NOTE (details.experiment.time.daysPassed):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of days since the experiment ran (detail view).
 details.experiment.time.daysPassed=#1 dag sedan;#1 dagar sedan
 #LOCALIZATION NOTE (details.experiment.time.endedToday) The experiment ended less than a day ago (detail view).
-details.experiment.time.endedToday=Mindre än en dag sedan 
+details.experiment.time.endedToday=Mindre än en dag sedan\u0020
 #LOCALIZATION NOTE (details.experiment.state.active) This experiment is active (detail view).
 details.experiment.state.active=Aktivt
 #LOCALIZATION NOTE (details.experiment.state.complete) This experiment is complete (it was previously active) (detail view).
@@ -125,16 +125,16 @@ details.experiment.state.complete=Slutförd
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of days from now that the experiment will remain active (list view item).
-experiment.time.daysRemaining=#1 day kvar; #1 dagar kvar 
+experiment.time.daysRemaining=#1 day kvar; #1 dagar kvar\u0020
 #LOCALIZATION NOTE (experiment.time.endsToday) The experiment will end in less than a day (list view item).
-experiment.time.endsToday=Mindre än en dag kvar 
+experiment.time.endsToday=Mindre än en dag kvar\u0020
 # LOCALIZATION NOTE (experiment.time.daysPassed):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of days since the experiment ran (list view item).
 experiment.time.daysPassed=#1 dag sedan;#1 dagar sedan
 #LOCALIZATION NOTE (experiment.time.endedToday) The experiment ended less than a day ago (list view item).
-experiment.time.endedToday=Mindre än en dag sedan 
+experiment.time.endedToday=Mindre än en dag sedan\u0020
 #LOCALIZATION NOTE (experiment.state.active) This experiment is active (list view item).
 experiment.state.active=Aktiv
 #LOCALIZATION NOTE (experiment.state.complete) This experiment is complete (it was previously active) (list view item).
@@ -161,8 +161,8 @@ addon.purchase.label=Köp för %S…
 addon.purchase.tooltip=Besöker galleriet för att köpa det här tillägget
 #LOCALIZATION NOTE (cmd.purchaseAddon.label) displayed on a button in the detail
 # view, %S is the price of the add-on including currency symbol
-cmd.purchaseAddon.label=K&öp för %S…
-cmd.purchaseAddon.accesskey=K&öp för %S…
+cmd.purchaseAddon.label=Köp för %S…
+cmd.purchaseAddon.accesskey=ö
 
 #LOCALIZATION NOTE (eulaHeader) %S is name of the add-on asking the user to agree to the EULA
 eulaHeader=%S kräver att du accepterar följande licensavtal för slutanvändare innan installationen kan fortsätta:
