--- a/sv-SE/toolkit/chrome/mozapps/plugins/plugins.properties
+++ b/sv-SE/toolkit/chrome/mozapps/plugins/plugins.properties
@@ -25,6 +25,6 @@ pluginInstallation.noPluginsInstalled=Inga insticksmoduler installerades.
 pluginInstallation.unknownPlugin=Okänd insticksmodul (%S)
 
 pluginInstallation.restart.label=Starta om %S
-pluginInstallation.restart.accesskey=Starta om %S
-pluginInstallation.close.label=St&äng
-pluginInstallation.close.accesskey=St&äng
+pluginInstallation.restart.accesskey=R
+pluginInstallation.close.label=Stäng
+pluginInstallation.close.accesskey=ä
