--- a/sv-SE/webapprt/webapprt/webapp.properties
+++ b/sv-SE/webapprt/webapprt/webapp.properties
@@ -40,6 +40,10 @@ webapps.install.title=Installera %S
 webapps.install.description=Vill du installera %S?
 webapps.install.install=Installera app
 webapps.install.dontinstall=Installera inte
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
 
 paymentDialog.title=Betalning
 paymentDialog.message=Vilken betalningstjänst vill du använda?
