--- a/sv-SE/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sv-SE/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -88,7 +88,7 @@ characterencoding-button.label = Teckenkodning
 characterencoding-button.tooltiptext2 = Visa teckenkodningsalternativ
 
 email-link-button.label = E-posta länk
-email-link-button.tooltiptext3 = Maila en länk till denna sidan 
+email-link-button.tooltiptext3 = Maila en länk till denna sidan\u0020
 
 # LOCALIZATION NOTE(quit-button.tooltiptext.linux2): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
@@ -96,3 +96,4 @@ quit-button.tooltiptext.linux2 = Avsluta %1$S (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Avsluta %1$S (%2$S)
+
