--- a/sv-SE/browser/chrome/browser/devtools/scratchpad.properties
+++ b/sv-SE/browser/chrome/browser/devtools/scratchpad.properties
@@ -103,3 +103,12 @@ scratchpad.panelLabel=Kladdblockspanel
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
 # window.
 scratchpad.tooltip=Kladdblocket
+
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
+selfxss.okstring=tillåt klistring\u0020
