--- a/sv-SE/browser/chrome/browser/devtools/webaudioeditor.properties
+++ b/sv-SE/browser/chrome/browser/devtools/webaudioeditor.properties
@@ -14,11 +14,11 @@
 # LOCALIZATION NOTE (ToolboxWebAudioEditor1.label):
 # This string is displayed in the title of the tab when the Web Audio Editor
 # is displayed inside the developer tools window and in the Developer Tools Menu.
-ToolboxWebAudioEditor1.label=Web Ljud 
+ToolboxWebAudioEditor1.label=Web Ljud\u0020
 
 # LOCALIZATION NOTE (ToolboxWebAudioEditor1.panelLabel):
 # This is used as the label for the toolbox panel.
-ToolboxWebAudioEditor1.panelLabel=Webljuds panel 
+ToolboxWebAudioEditor1.panelLabel=Webljuds panel\u0020
 
 # LOCALIZATION NOTE (ToolboxWebAudioEditor1.tooltip):
 # This string is displayed in the tooltip of the tab when the Web Audio Editor is
