--- a/sv-SE/browser/chrome/browser/newTab.properties
+++ b/sv-SE/browser/chrome/browser/newTab.properties
@@ -5,6 +5,20 @@
 newtab.pin=Fäst webbplatsen på dess nuvarande position
 newtab.unpin=Lösgör webbplatsen
 newtab.block=Ta bort webbplatsen
-newtab.show=Visa fliken Ny sida
-newtab.hide=Dölj fliken Ny sida
-newtab.sponsored=Visa information på sponsrade titlar 
+# LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
+# and enhanced tiles on the same line as the tile's title, so prefer short
+# strings to avoid overlap. This string should be uppercase.
+newtab.sponsored.button=SPONSRAD
+# LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
+# the (X) block icon. %2$S will be replaced by an active link using string
+# newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window. %2$S will be replaced by
+# an active link using string newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
+# active link using string newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
+# active link using string newtab.privacy.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window.
+newtab.privacy.link=Integritetsinfo
