--- a/sv-SE/browser/chrome/browser/places/places.properties
+++ b/sv-SE/browser/chrome/browser/places/places.properties
@@ -28,24 +28,24 @@ sortByNameGeneric=Ordna efter namn
 # When any of these changes, all of the properties must be bumped, and the
 # change must be annotated here.  Both label and accesskey must be updated.
 # - version 1: changed view.sortBy.1.date.
-view.sortBy.1.name.label=Ordna efter &Namn
-view.sortBy.1.name.accesskey=Ordna efter &Namn
-view.sortBy.1.url.label=Sortera efter &Plats
-view.sortBy.1.url.accesskey=Sortera efter &Plats
-view.sortBy.1.date.label=Sortera efter Senaste &Besök
-view.sortBy.1.date.accesskey=Sortera efter Senaste &Besök
-view.sortBy.1.visitCount.label=Sortera efter besöks &Antal
-view.sortBy.1.visitCount.accesskey=Sortera efter besöks &Antal
-view.sortBy.1.keyword.label=Sortera efter &Nyckelord
-view.sortBy.1.keyword.accesskey=Sortera efter &Nyckelord
-view.sortBy.1.description.label=Sortera på &Beskrivning
-view.sortBy.1.description.accesskey=Sortera på &Beskrivning
-view.sortBy.1.dateAdded.label=Sortera på &Tillagd
-view.sortBy.1.dateAdded.accesskey=Sortera på &Tillagd
-view.sortBy.1.lastModified.label=Sortera efter Senast &uppdaterad
-view.sortBy.1.lastModified.accesskey=Sortera efter Senast &uppdaterad
-view.sortBy.1.tags.label=Ordna efter &Taggar
-view.sortBy.1.tags.accesskey=Ordna efter &Taggar
+view.sortBy.1.name.label=Ordna efter Namn
+view.sortBy.1.name.accesskey=N
+view.sortBy.1.url.label=Sortera efter Plats
+view.sortBy.1.url.accesskey=P
+view.sortBy.1.date.label=Sortera efter Senaste Besök
+view.sortBy.1.date.accesskey=B
+view.sortBy.1.visitCount.label=Sortera efter besöks Antal
+view.sortBy.1.visitCount.accesskey=A
+view.sortBy.1.keyword.label=Sortera efter Nyckelord
+view.sortBy.1.keyword.accesskey=N
+view.sortBy.1.description.label=Sortera på Beskrivning
+view.sortBy.1.description.accesskey=B
+view.sortBy.1.dateAdded.label=Sortera på Tillagd
+view.sortBy.1.dateAdded.accesskey=T
+view.sortBy.1.lastModified.label=Sortera efter Senast uppdaterad
+view.sortBy.1.lastModified.accesskey=u
+view.sortBy.1.tags.label=Ordna efter Taggar
+view.sortBy.1.tags.accesskey=T
 
 searchBookmarks=Sök bokmärken
 searchHistory=Sök i historiken
@@ -90,5 +90,5 @@ bookmarkResultLabel=Bokmärke
 # %S will be replaced with the application name.
 lockPrompt.title=Fel vid start av webbläsaren
 lockPrompt.text=Systemet med bokmärken och historik kommer inte att fungera eftersom en av %S filer används av ett annat program. Vissa säkerhetsprogram kan orsaka detta problem.
-lockPromptInfoButton.label=&Lär dig mer
-lockPromptInfoButton.accessKey=&Lär dig mer
+lockPromptInfoButton.label=Lär dig mer
+lockPromptInfoButton.accessKey=L
