--- a/sv-SE/browser/chrome/browser/translation.properties
+++ b/sv-SE/browser/chrome/browser/translation.properties
@@ -4,9 +4,9 @@
 
 # LOCALIZATION NOTE (translation.options.neverForLanguage.label):
 #  %S is a language name coming from the global/languageNames.properties file.
-translation.options.neverForLanguage.label=&Översätt aldrig %S 
+translation.options.neverForLanguage.label=Översätt aldrig %S\u0020
 
 # LOCALIZATION NOTE (translation.options.neverForLanguage.accesskey):
 # The accesskey value used here should not clash with the values used for
 # translation.options.*.accesskey in translation.dtd
-translation.options.neverForLanguage.accesskey=&Översätt aldrig %S 
+translation.options.neverForLanguage.accesskey=Ö
