--- a/sv-SE/dom/chrome/accessibility/AccessFu.properties
+++ b/sv-SE/dom/chrome/accessibility/AccessFu.properties
@@ -7,11 +7,9 @@ screenReaderStarted = Skärmläsare startad
 screenReaderStopped = Skärmläsare stoppad
 
 # Roles
-menubar        =       menyfält
+menubar        =       menyrad
 scrollbar      =       rullningslist
-grip           =       grepp
-alert          =       meddelande
-menupopup      =       meny
+alert          =       alarm
 document       =       dokument
 pane           =       panel
 dialog         =       dialogruta
@@ -23,37 +21,19 @@ columnheader   =       kolumnhuvud
 rowheader      =       radhuvud
 column         =       kolumn
 row            =       rad
-cell           =       cell
 link           =       länk
 list           =       lista
-listitem       =       listpost
-outline        =       schema
-outlineitem    =       schemapost
-pagetab        =       flik
-propertypage   =       egenskapssida
-graphic        =       grafik
+listitem       =       listobjekt
 pushbutton     =       knapp
-checkbutton    =       kryssruta
-radiobutton    =       alternativknapp
-combobox       =       kombinationsruta
 progressbar    =       förloppsindikator
 slider         =       skjutreglage
-spinbutton     =       rotationsknapp
 diagram        =       diagram
 animation      =       animation
 equation       =       ekvation
 buttonmenu     =       knappmeny
 whitespace     =       mellanrum
 pagetablist    =       fliklista
-canvas         =       canvas
-checkmenuitem  =       menypost med kryssruta
-label          =       etikett
 passwordtext   =       lösenordstext
-radiomenuitem  =       alternativmenypost
-textcontainer  =       textutrymme
-togglebutton   =       växlingsknapp
-treetable      =       trädtabell
-header         =       huvud
 footer         =       fot
 paragraph      =       paragraf
 entry          =       post
@@ -61,18 +41,8 @@ caption        =       rubrik
 heading        =       överskrift
 section        =       sektion
 form           =       formulär
-comboboxlist   =       kombinationsrutelista
-comboboxoption =       kombinationsrutealternativ
 imagemap       =       bildkarta
-listboxoption  =       alternativ
-listbox        =       listruta
-flatequation   =       enkel ekvation
-gridcell       =       rutnätscell
-note           =       anteckning
 figure         =       figur
-definitionlist =       definitionslista
-term           =       term
-definition     =       definition
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       textområde
@@ -94,11 +64,10 @@ listEnd        =       Sista post
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       1 post;#1 poster
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S %2$S av %3$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
+objItemOfN      =       %1$S — %2$S
 
 # Landmark announcements
 banner         =       banner
@@ -108,17 +77,12 @@ main           =       allmänt
 navigation     =       navigation
 search         =       sök
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S med %S och %S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 kolumn;#1 kolumner
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 rad;#1 rader
 
 # table or grid cell information
 columnInfo = Kolumn %S
@@ -190,18 +154,51 @@ quicknav_Table       = Tabeller
 quicknav_Checkbox    = Kryssrutor
 
 # Shortened role names for braille
+menubarAbbr        =       menyrad
+scrollbarAbbr      =       rullningslist
+alertAbbr          =       alarm
+documentAbbr       =       dokument
+tableAbbr          =       tbl
+columnAbbr         =       kolumn
+rowAbbr            =       rad
 linkAbbr           =       lnk
+listAbbr           =       lista
+listitemAbbr       =       listpost
+outlineAbbr        =       kontur
+pagetabAbbr        =       flik
+propertypageAbbr   =       egenskapssida
 pushbuttonAbbr     =       btn
+sliderAbbr         =       skjutreglage
+diagramAbbr        =       diagram
+animationAbbr      =       animation
+equationAbbr       =       ekvation
+whitespaceAbbr     =       mellanrum
+pagetablistAbbr    =       fliklista
+canvasAbbr         =       canvas
 passwordtextAbbr   =       passwdtxt
+footerAbbr         =       fot
+paragraphAbbr      =       paragraf
+entryAbbr          =       post
+captionAbbr        =       rubrik
+headingAbbr        =       överskrift
+sectionAbbr        =       sektion
+formAbbr           =       formulär
 imagemapAbbr       =       imgmap
 figureAbbr         =       fig
+definitionAbbr     =       definition
 textareaAbbr       =       txtarea
-tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1k;#1k
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1k;#1k
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r
+tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = k%Sr%S
+
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
