--- a/sv-SE/dom/chrome/layout/HtmlForm.properties
+++ b/sv-SE/dom/chrome/layout/HtmlForm.properties
@@ -10,7 +10,7 @@ FileUpload=Filöverföring
 # should be a space (U+0020) in most locales. The prompt is followed by an 
 # input field. The space needs be escaped in the property file to avoid 
 # trimming.
-IsIndexPromptWithSpace=Detta är ett sökbart index. Skriv in sökord: 
+IsIndexPromptWithSpace=Detta är ett sökbart index. Skriv in sökord:\u0020
 ForgotPostWarning=Formuläret innehåller enctype=%S, men inte method=post.  Skickar med det normala method=GET och ingen enctype istället.
 ForgotFileEnctypeWarning=Formuläret innehåller inmatning av en fil men saknar method=POST och enctype=multipart/form-data. Filen kommer inte att skickas.
 # LOCALIZATION NOTE (DefaultFormSubject): %S will be replaced with brandShortName
