--- a/sv-SE/toolkit/chrome/global/regionNames.properties
+++ b/sv-SE/toolkit/chrome/global/regionNames.properties
@@ -148,7 +148,7 @@ mk=	Makedonien
 ml=	Mali
 mm=	Myanmar
 mn=	Mongoliet
-mo=	Macao 
+mo=	Macao\u0020
 mp=	Nordmarianerna
 mq=	Martinique
 mr=	Mauritanien
