--- a/sv-SE/toolkit/chrome/global/resetProfile.properties
+++ b/sv-SE/toolkit/chrome/global/resetProfile.properties
@@ -8,5 +8,5 @@
 resetUnusedProfile.message=Du verkar inte ha startat %S på ett tag. Vill du städa ur den för att få uppleva den som när den var ny? Och välkommen tillbaka förresten!
 
 # LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=Åt&erställ %S...
-resetProfile.resetButton.accesskey=Åt&erställ %S...
+resetProfile.resetButton.label=Återställ %S...
+resetProfile.resetButton.accesskey=e
