[S] mobile: Bug 960584 - notify user of download progress indication when fetching APK

--- a/it/mobile/android/chrome/webapp.properties
+++ b/it/mobile/android/chrome/webapp.properties
@@ -6,6 +6,8 @@ checkingForUpdatesTitle = Ricerca aggiornamenti…
 checkingForUpdatesMessage = Ricerca aggiornamenti per le app
 noUpdatesTitle = Nessun agg. disponibile
 noUpdatesMessage = Non ci sono aggiornamenti disponibili
+retrievingTitle = Recupero app…
+retrievingMessage = %1$S
 retrieveUpdateTitle = #1 nuovo aggiornamento disponibile;#1 nuovi aggiornamenti disponibili
 retrieveUpdateMessage = Tocca per scaricare l’aggiornamento per %1$S;Tocca per scaricare gli aggiornamenti per %1$S
 retrievingUpdateTitle = Download di #1 aggiornamento…;Download di #1 aggiornamenti…
