--- a/it/browser/chrome/browser/places/places.properties
+++ b/it/browser/chrome/browser/places/places.properties
@@ -55,6 +55,7 @@ OrganizerQueryAllBookmarks = Tutti i segnalibri
 OrganizerQueryTags = Etichette
 tagResultLabel = Etichetta
 bookmarkResultLabel = Segnalibro
+switchtabResultLabel = Scheda
 lockPrompt.title = Errore avvio browser
 lockPrompt.text = I segnalibri e la cronologia non potranno funzionare correttamente in quanto un file di %S risulta utilizzato da un’altra applicazione. Il problema potrebbe essere causato da un software di sicurezza.
 lockPromptInfoButton.label = Ulteriori informazioni
