--- a/sv-SE/dom/chrome/accessibility/AccessFu.properties
+++ b/sv-SE/dom/chrome/accessibility/AccessFu.properties
@@ -9,40 +9,70 @@ screenReaderStopped = Skärmläsare stoppad
 # Roles
 menubar        =       menyrad
 scrollbar      =       rullningslist
-alert          =       alarm
+grip           =       grepp
+alert          =       avisering
+menupopup      =       meny
 document       =       dokument
-pane           =       panel
-dialog         =       dialogruta
-separator      =       avskiljare
+pane           =       fönster
+dialog         =       dialog
+separator      =       avgränsare
 toolbar        =       verktygsfält
 statusbar      =       statusfält
 table          =       tabell
-columnheader   =       kolumnhuvud
-rowheader      =       radhuvud
+columnheader   =       kolumnrubrik
+rowheader      =       radrubrik
 column         =       kolumn
 row            =       rad
+cell           =       cell
 link           =       länk
 list           =       lista
 listitem       =       listobjekt
+outline        =       disposition
+outlineitem    =       dispositionsobjekt
+pagetab        =       sidflik
+propertypage   =       egenskapssida
+graphic        =       grafik
 pushbutton     =       knapp
+checkbutton    =       kryssruta
+radiobutton    =       alternativknapp
+combobox       =       kombinationsruta
 progressbar    =       förloppsindikator
 slider         =       skjutreglage
+spinbutton     =       rotationsknapp
 diagram        =       diagram
 animation      =       animation
 equation       =       ekvation
 buttonmenu     =       knappmeny
-whitespace     =       mellanrum
-pagetablist    =       fliklista
+whitespace     =       tomt utrymme
+pagetablist    =       sidflikslista
+canvas         =       arbetsyta
+checkmenuitem  =       kryssruta som menyobjekt
+label          =       etikett
 passwordtext   =       lösenordstext
-footer         =       fot
+radiomenuitem  =       alternativknapp som menyobjekt
+textcontainer  =       textbehållare
+togglebutton   =       växlingsknapp
+treetable      =       trädtabell
+header         =       sidhuvud
+footer         =       sidfot
 paragraph      =       paragraf
 entry          =       post
-caption        =       rubrik
-heading        =       överskrift
+caption        =       bildtext
+heading        =       rubrik
 section        =       sektion
 form           =       formulär
-imagemap       =       bildkarta
+comboboxlist   =       kombinationsrutelista
+comboboxoption =       kombinationsrutealternativ
+imagemap       =       bild
+listboxoption  =       listrutealternativ
+listbox        =       listruta
+flatequation   =       enkel ekvation
+gridcell       =       rutnätscell
+note           =       anteckning
 figure         =       figur
+definitionlist =       definitionslista
+term           =       term
+definition     =       definition
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       textområde
@@ -55,19 +85,19 @@ textInputType_tel    =       telefon
 textInputType_url    =       URL
 
 # More sophisticated object descriptions
-headingLevel   =       huvudnivå %S
+headingLevel   =       rubriksnivå %S
 
 # more sophisticated list announcement
-listStart      =       Första post
-listEnd        =       Sista post
+listStart      =       Första objektet
+listEnd        =       Sista objektet
 # LOCALIZATION NOTE (listItemsCount): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-listItemsCount =       1 post;#1 poster
+listItemsCount =       1 objekt;#1 objekt
 
 # LOCALIZATION NOTE: # %1$S is the position of the item n the set.
 # %2$S is the total number of such items in the set.
 # An expanded example would read "2 of 5".
-objItemOfN      =       %1$S — %2$S
+objItemOfN      =       %1$S av %2$S
 
 # Landmark announcements
 banner         =       banner
@@ -80,9 +110,11 @@ search         =       sök
 # LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
 # Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblColumnInfo = med 1 kolumn;med #1 kolumner
 # LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
 # Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblRowInfo = och 1 rad;och #1 rader
 
 # table or grid cell information
 columnInfo = Kolumn %S
@@ -115,7 +147,7 @@ tabLoading     =      laddar
 tabLoaded      =      laddad
 tabNew         =      ny flik
 tabLoadStopped =      laddning avbruten
-tabReload      =      hämta om
+tabReload      =      ladda om
 
 # Object states
 stateChecked     =    markerad
@@ -138,55 +170,89 @@ navigationMode =      navigerar
 quicknav_Simple      = Standard
 quicknav_Anchor      = Ankare
 quicknav_Button      = Knappar
-quicknav_Combobox    = Kombinationsruta
-quicknav_Landmark    = Landmärken
+quicknav_Combobox    = Kombinationsrutor
+quicknav_Landmark    = Milstolpar
 quicknav_Entry       = Poster
-quicknav_FormElement = Formulärelement
+quicknav_FormElement = Formulärfält
 quicknav_Graphic     = Bilder
-quicknav_Heading     = Huvuden
-quicknav_ListItem    = Listposter
+quicknav_Heading     = Rubriker
+quicknav_ListItem    = Listobjekt
 quicknav_Link        = Länkar
 quicknav_List        = Listor
 quicknav_PageTab     = Sidflikar
 quicknav_RadioButton = Alternativknappar
-quicknav_Separator   = Avskiljare
+quicknav_Separator   = Avgränsare
 quicknav_Table       = Tabeller
 quicknav_Checkbox    = Kryssrutor
 
 # Shortened role names for braille
 menubarAbbr        =       menyrad
 scrollbarAbbr      =       rullningslist
-alertAbbr          =       alarm
+gripAbbr           =       grepp
+alertAbbr          =       avisering
+menupopupAbbr      =       meny
 documentAbbr       =       dokument
-tableAbbr          =       tbl
+paneAbbr           =       fönster
+dialogAbbr         =       dialog
+separatorAbbr      =       avgränsare
+toolbarAbbr        =       verktygsfält
+statusbarAbbr      =       statusfält
+tableAbbr          =       tab.
+columnheaderAbbr   =       kolumnrubrik
+rowheaderAbbr      =       radrubrik
 columnAbbr         =       kolumn
 rowAbbr            =       rad
+cellAbbr           =       cell
 linkAbbr           =       lnk
 listAbbr           =       lista
-listitemAbbr       =       listpost
-outlineAbbr        =       kontur
-pagetabAbbr        =       flik
+listitemAbbr       =       listobjekt
+outlineAbbr        =       disposition
+outlineitemAbbr    =       dispositionsobjekt
+pagetabAbbr        =       sidflik
 propertypageAbbr   =       egenskapssida
-pushbuttonAbbr     =       btn
+graphicAbbr        =       grafik
+pushbuttonAbbr     =       knp
+checkbuttonAbbr    =       kryssruta
+radiobuttonAbbr    =       alternativknapp
+comboboxAbbr       =       kombinationsruta
+progressbarAbbr    =       förloppsindikator
 sliderAbbr         =       skjutreglage
+spinbuttonAbbr     =       rotationsknapp
 diagramAbbr        =       diagram
 animationAbbr      =       animation
 equationAbbr       =       ekvation
-whitespaceAbbr     =       mellanrum
-pagetablistAbbr    =       fliklista
-canvasAbbr         =       canvas
-passwordtextAbbr   =       passwdtxt
-footerAbbr         =       fot
+buttonmenuAbbr     =       knappmeny
+whitespaceAbbr     =       tomt utrymme
+pagetablistAbbr    =       sidflikslista
+canvasAbbr         =       arbetsyta
+checkmenuitemAbbr  =       kryssruta som menyobjekt
+labelAbbr          =       etikett
+passwordtextAbbr   =       lösenordstxt
+radiomenuitemAbbr  =       alternativknapp som menyobjekt
+textcontainerAbbr  =       textbehållare
+togglebuttonAbbr   =       växlingsknapp
+treetableAbbr      =       trädtabell
+headerAbbr         =       sidhuvud
+footerAbbr         =       sidfot
 paragraphAbbr      =       paragraf
 entryAbbr          =       post
-captionAbbr        =       rubrik
-headingAbbr        =       överskrift
+captionAbbr        =       bildtext
+headingAbbr        =       rubrik
 sectionAbbr        =       sektion
 formAbbr           =       formulär
-imagemapAbbr       =       imgmap
+comboboxlistAbbr   =       kombinationsrutelista
+comboboxoptionAbbr =       kombinationsrutealternativ
+imagemapAbbr       =       bild
+listboxoptionAbbr  =       listrutealternativ
+listboxAbbr        =       listruta
+flatequationAbbr   =       enkel ekvation
+gridcellAbbr       =       rutnätscell
+noteAbbr           =       anteckning
 figureAbbr         =       fig
+definitionlistAbbr =       definitionslista
+termAbbr           =       term
 definitionAbbr     =       definition
-textareaAbbr       =       txtarea
+textareaAbbr       =       txtomr
 
 # LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
 # Number of columns within the table.
