--- a/fr/browser/chrome/browser/devtools/webide.properties
+++ b/fr/browser/chrome/browser/devtools/webide.properties
@@ -22,6 +22,10 @@ importHostedApp_header=Saisir une URL de manifeste
 notification_showTroubleShooting_label=dépannage
 notification_showTroubleShooting_accesskey=d
 
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=Chargement…
+
 # These messages appear in a notification box when an error occur.
 
 error_cantInstallNotFullyConnected=Impossible d'installer le projet. Connexion incomplète.
