[S] mobile: Bug 1058150 - Use restricted profiles for guest mode

--- a/it/mobile/android/chrome/webapp.properties
+++ b/it/mobile/android/chrome/webapp.properties
@@ -16,4 +16,4 @@ installUpdateTitle = #1 aggiornamento scaricato;#1 aggiornamenti scaricati
 installUpdateMessage2 = Tocca per installare l’aggiornamento per %1$S;Tocca per installare gli aggiornamenti per %1$S
 retrievalFailedTitle = #1 aggiornamento non riuscito;#1 aggiornamenti non riusciti
 retrievalFailedMessage = Impossibile scaricare l’aggiornamento per %1$S;Impossibile scaricare gli aggiornamenti per %1$S
-webappsDisabledInGuest = L’installazione di app è disattivata in una sessione ospite
+webappsDisabled = L’installazione di app è disattivata
