[S] security: Bug 752559 - Console warning when sandboxed iframe is used ineffectively

--- a/it/dom/chrome/security/security.properties
+++ b/it/dom/chrome/security/security.properties
@@ -7,3 +7,4 @@ InsecureFormActionPasswordsPresent = Sono presenti campi password in un modulo c
 InsecurePasswordsPresentOnIframe = Sono presenti campi password in un iframe con connessione non sicura (http://). Si tratta di un rischio per la sicurezza in quanto consente il furto delle credenziali di accesso inserite.
 LoadingMixedActiveContent = Caricamento in corso di contenuto misto attivo (non sicuro) su una pagina sicura “%1$S”
 LoadingMixedDisplayContent = Caricamento in corso di contenuto misto non attivo (non sicuro) su una pagina sicura “%1$S”
+BothAllowScriptsAndSameOriginPresent = Un iframe che presenti come attributi sandbox sia allow-scripts sia allow-same-origin potrebbe rimuovere sé stesso dal meccanismo di sandbox.
