Bug 1063933 - Firefox Desktop 34: webapprt. r=KaiRo

--- a/de/webapprt/webapprt/webapp.properties
+++ b/de/webapprt/webapprt/webapp.properties
@@ -40,6 +40,14 @@ webapps.install.title=%S installieren
 webapps.install.description=Wollen Sie %S installieren?
 webapps.install.install=App installieren
 webapps.install.dontinstall=Nicht installieren
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=%S deinstallieren
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=Soll %S deinstalliert werden?
+webapps.uninstall.uninstall=App deinstallieren
+webapps.uninstall.dontuninstall=Nicht deinstallieren
 
 paymentDialog.title=Bezahlung
 paymentDialog.message=Welcher Zahlungsanbieter soll verwendet werden?
