Bug 1063933 - Firefox Desktop 34: toolkit. r=KaiRo

--- a/de/toolkit/chrome/global/aboutSupport.properties
+++ b/de/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = ClearType-Parameter nicht gefunden
 adapterDescription = Karten-Beschreibung
 adapterVendorID = Vendor-ID
 adapterDeviceID = Geräte-ID
+adapterSubsysID = Subsys-ID
 adapterDrivers = Karten-Treiber
 adapterRAM = Karten-RAM
 driverVersion = Treiber-Version
@@ -71,6 +72,7 @@ driverDate = Treiber-Datum
 adapterDescription2 = Karten-Beschreibung (GPU #2)
 adapterVendorID2 = Vendor-ID (GPU #2)
 adapterDeviceID2 = Geräte-ID (GPU #2)
+adapterSubsysID2 = Subsys-ID (GPU #2)
 adapterDrivers2 = Karten-Treiber (GPU #2)
 adapterRAM2 = Karten-RAM (GPU #2)
 driverVersion2 = Treiber-Version (GPU #2)
