Bug 1063933 - Firefox Desktop 34: browser. r=KaiRo

--- a/de/browser/chrome/browser/browser.properties
+++ b/de/browser/chrome/browser/browser.properties
@@ -98,6 +98,11 @@ popupWarningDontShowFromMessage=Diese Nachricht nicht mehr einblenden, wenn Pop-
 popupWarningDontShowFromLocationbar=Informationsleiste nicht einblenden, wenn Pop-ups blockiert wurden
 popupShowPopupPrefix=Anzeigen: '%S'
 
+# Bad Content Blocker Doorhanger Notification
+# %S is brandShortName
+badContentBlocked.blocked.message=%S blockiert Inhalte auf dieser Seite.
+badContentBlocked.notblocked.message=%S blockiert keinen Inhalt auf dieser Seite.
+
 # missing plugin installer
 installPlugin.message = Soll das für die Wiedergabe von Medienelementen auf dieser Seite benötigte Plugin installiert werden?
 installPlugin.button.label=%S installieren
@@ -444,6 +449,12 @@ webapps.install.accesskey = I
 webapps.requestInstall = Wollen Sie "%1$S" von dieser Seite (%2$S) installieren?
 webapps.install.success = App wurde installiert
 webapps.install.inprogress = Installation wird durchgeführt…
+webapps.uninstall = Deinstallieren
+webapps.uninstall.accesskey = D
+webapps.doNotUninstall = Nicht deinstallieren
+webapps.doNotUninstall.accesskey = N
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = Soll "%1$S" deinstalliert werden?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S wird nun als Vollbild dargestellt.
@@ -504,10 +515,24 @@ getUserMedia.shareMicrophone.message = Soll %S auf Ihr Mikrofon zugreifen dürfe
 getUserMedia.shareScreen.message = Soll %S auf Ihren Bildschirm zugreifen dürfen?
 getUserMedia.shareCameraAndMicrophone.message = Soll %S auf Ihre Kamera und Ihr Mikrofon zugreifen dürfen?
 getUserMedia.shareScreenAndMicrophone.message = Soll %S auf Ihr Mikrofon und Ihren Bildschirm zugreifen dürfen?
+getUserMedia.selectWindow.label=Weiterzugebendes Fenster:
+getUserMedia.selectWindow.accesskey=F
+getUserMedia.selectScreen.label=Weiterzugebender Bildschirm:
+getUserMedia.selectScreen.accesskey=B
+getUserMedia.selectApplication.label=Weiterzugebende Anwendung:
+getUserMedia.selectApplication.accesskey=A
 getUserMedia.noVideo.label = Kein Video
-getUserMedia.noWindowOrScreen.label = Kein Fenster oder Bildschirm
+getUserMedia.noApplication.label = Keine Anwendung
+getUserMedia.noScreen.label = Kein Bildschirm
+getUserMedia.noWindow.label = Kein Fenster
 getUserMedia.noAudio.label = Kein Audio
 getUserMedia.shareEntireScreen.label = Vollständiger Bildschirm
+# LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
+# Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Replacement for #1 is the name of the application.
+# Replacement for #2 is the number of windows currently displayed by the application.
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 Fenster);#1 (#2 Fenster)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -515,6 +540,7 @@ getUserMedia.shareEntireScreen.label = Vollständiger Bildschirm
 getUserMedia.shareSelectedDevices.label = Zugriff auf ausgewähltes Gerät erlauben;Zugriff auf ausgewählte Geräte erlauben
 getUserMedia.shareSelectedDevices.accesskey = e
 getUserMedia.shareScreen.label = Zugriff auf Bildschirm erlauben
+getUserMedia.shareApplication.label = Zugriff auf gewählte Anwendung erlauben
 getUserMedia.shareWindow.label = Zugriff auf ausgewähltes Fenster erlauben
 getUserMedia.shareSelectedItems.label = Zugriff auf ausgewählte Einträge erlauben
 getUserMedia.always.label = Immer erlauben
@@ -526,6 +552,7 @@ getUserMedia.never.accesskey = N
 getUserMedia.sharingCamera.message2 = Sie erlauben der Seite derzeit den Zugriff auf Ihre Kamera.
 getUserMedia.sharingMicrophone.message2 = Sie erlauben der Seite derzeit den Zugriff auf Ihr Mikrofon.
 getUserMedia.sharingCameraAndMicrophone.message2 = Sie erlauben der Seite derzeit den Zugriff auf Ihre Kamera und Ihr Mikrofon.
+getUserMedia.sharingApplication.message = Sie erlauben der Seite derzeit den Zugriff auf eine Anwendung.
 getUserMedia.sharingScreen.message = Sie erlauben der Seite derzeit den Zugriff auf Ihren Bildschirm.
 getUserMedia.sharingWindow.message = Sie erlauben der Seite derzeit den Zugriff auf ein Fenster.
 getUserMedia.continueSharing.label = Weiter Zugriff erlauben
@@ -533,13 +560,34 @@ getUserMedia.continueSharing.accesskey = e
 getUserMedia.stopSharing.label = Zugriff entziehen
 getUserMedia.stopSharing.accesskey = z
 
-# Mixed Content Blocker Doorhanger Notification
-# LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message = %S hat unsichere Inhalte blockiert.
-mixedContentBlocked.keepBlockingButton.label = Weiter blockieren
-mixedContentBlocked.keepBlockingButton.accesskey = b
-mixedContentBlocked.unblock.label = Schutz auf dieser Seite deaktivieren
-mixedContentBlocked.unblock.accesskey = d
+getUserMedia.sharingMenu.label = Tabs mit Zugriff auf Gerät
+getUserMedia.sharingMenu.accesskey = Z
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
+#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuCameraMicrophone,
+#                    getUserMedia.sharingMenuCameraMicrophoneApplication,
+#                    getUserMedia.sharingMenuCameraMicrophoneScreen,
+#                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuMicrophoneApplication,
+#                    getUserMedia.sharingMenuMicrophoneScreen,
+#                    getUserMedia.sharingMenuMicrophoneWindow):
+# %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.sharingMenuCamera = %S (Kamera)
+getUserMedia.sharingMenuMicrophone = %S (Mikrofon)
+getUserMedia.sharingMenuApplication = %S (Anwendung)
+getUserMedia.sharingMenuScreen = %S (Bildschirm)
+getUserMedia.sharingMenuWindow = %S (Fenster)
+getUserMedia.sharingMenuCameraMicrophone = %S (Kamera und Mikrofon)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (Kamera, Mikrofon und Anwendung)
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (Kamera, Mikrofon und Bildschirm)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (Kamera, Mikrofon und Fenster)
+getUserMedia.sharingMenuMicrophoneApplication = %S (Mikrofon und Anwendung)
+getUserMedia.sharingMenuMicrophoneScreen = %S (Mikrofon und Bildschirm)
+getUserMedia.sharingMenuMicrophoneWindow = %S (Mikrofon und Fenster)
+# LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
+# origin for the sharing menu if no readable origin could be deduced from the URL.
+getUserMedia.sharingMenuUnknownHost = Unbekannter Ursprung
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S scheint langsam… zu… starten.
