--- a/de/browser/chrome/browser/preferences/preferences.properties
+++ b/de/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=Folgende Cookies sind momentan auf Ihrem Computer gespeichert:
 cookiesFiltered=Folgende Cookies entsprechen Ihrer Suche:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Offline-Website-Daten entfernen
 offlineAppRemovePrompt=Wenn Sie diese Daten entfernen, wird %S nicht mehr offline zur Verfügung stehen.  Sind Sie sicher, dass Sie diese Offline-Website entfernen wollen?
 offlineAppRemoveConfirm=Offline-Daten entfernen
