--- a/de/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/de/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -96,3 +96,6 @@ quit-button.tooltiptext.linux2 = %1$S beenden (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = %1$S beenden (%2$S)
+
+loop-call-button.label = Zu Gespräch einladen
+loop-call-button.tooltiptext = Eine Person zu einem Gespräch einladen
