Changes mainly in browser

--- a/es-CL/dom/chrome/accessibility/AccessFu.properties
+++ b/es-CL/dom/chrome/accessibility/AccessFu.properties
@@ -83,7 +83,7 @@ listStart = Primer elemento
 listEnd = Último elemento
 listItemsCount =       1 elemento;#1 elementos
 
-objItemOfN      =       %1$S de %2$S
+objItemOfN     =       %1$S de %2$S
 
 banner         =       anuncio
 complementary  =       complementario
@@ -92,42 +92,43 @@ main           =       principal
 navigation     =       navegación
 search         =       búsqueda
 
-tblColumnInfo = con 1 columna;con #1 columnas
-tblRowInfo = y 1 fila;y #1 filas
+tblColumnInfo  = con 1 columna;con #1 columnas
+tblRowInfo     = y 1 fila;y #1 filas
 
-columnInfo = Columna %S
-rowInfo = Fila %S
-spansColumns = expande %S columnas
-spansRows = expande %S filas
+columnInfo     = Columna %S
+rowInfo        = Fila %S
+spansColumns   = expande %S columnas
+spansRows      = expande %S filas
 
-jumpAction = saltado
-pressAction = presionado
-checkAction = marcado
-uncheckAction = desmarcado
-selectAction = seleccionado
-unselectAction =deseleccionado
-openAction = abierto
-closeAction = cerrado
-switchAction = activado
-clickAction = apretado
-collapseAction = colapsado
-expandAction = expandido
-activateAction = activado
-cycleAction = rotado
-hidden = ocultado
-tabLoading = cargando
-tabLoaded = cargado
-tabNew = nueva pestaña
-tabLoadStopped = carga detenida
-tabReload = recargando
-stateChecked = marcado
-stateNotChecked = no marcado
+jumpAction       =    saltado
+pressAction      =    presionado
+checkAction      =    marcado
+uncheckAction    =    desmarcado
+selectAction     =    seleccionado
+unselectAction   =    deseleccionado
+openAction       =    abierto
+closeAction      =    cerrado
+switchAction     =    activado
+clickAction      =    apretado
+collapseAction   =    colapsado
+expandAction     =    expandido
+activateAction   =    activado
+cycleAction      =    rotado
+hidden           =    ocultado
+tabLoading       =    cargando
+tabLoaded        =    cargado
+tabNew           =    nueva pestaña
+tabLoadStopped   =    carga detenida
+tabReload        =    recargando
+stateChecked     =    marcado
+stateNotChecked  =    no marcado
 statePressed     =    presionado
-stateExpanded = expandido
-stateCollapsed = colapsado
-stateUnavailable = no disponible
-stateRequired = requerido
-stateTraversed = visitado
+stateExpanded    =    expandido
+stateCollapsed   =    colapsado
+stateUnavailable =    no disponible
+stateReadonly    =    solo lectura
+stateRequired    =    requerido
+stateTraversed   =    visitado
 stateHasPopup    =    tiene ventana emergente
 stateSelected    =    seleccionado
 
