--- a/es-CL/browser/chrome/browser/downloads/downloads.properties
+++ b/es-CL/browser/chrome/browser/downloads/downloads.properties
@@ -38,6 +38,33 @@ stateBlockedPolicy=Bloqueado por tu política de zona de seguridad
 # Indicates that the download was blocked after scanning.
 stateDirty=Bloqueado: Puede contener un virus o spyware
 
+# LOCALIZATION NOTE (blockedMalware, blockedPotentiallyUnwanted,
+#                    blockedUncommon):
+# These strings are shown in the panel for some types of blocked downloads, and
+# are immediately followed by the "Learn More" link, thus they must end with a
+# period.  You may need to adjust "downloadDetails.width" in "downloads.dtd" if
+# this turns out to be longer than the other existing status strings.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+blockedMalware=Este archivo contiene un virus o malware.
+blockedPotentiallyUnwanted=Este archivo puede dañar su computador.
+blockedUncommon=Este archivo puede no ser seguro de abrir.
+
+# LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
+#                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
+#                    unblockTip, unblockButtonContinue, unblockButtonCancel):
+# These strings are displayed in the dialog shown when the user asks a blocked
+# download to be unblocked.  The severity of the threat is expressed in
+# descending order by the unblockType strings, it is higher for files detected
+# as malware and lower for uncommon downloads.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader=¿Está seguro de que desea desbloquear este archivo?
+unblockTypeMalware=Este archivo contiene un virus u otro malware que dañará su computador.
+unblockTypePotentiallyUnwanted=Este archivo, camuflado como una descarga útil, hará cambios no esperados a sus programas y ajustes.
+unblockTypeUncommon=Este archivo ha sido descargado desde un sitio web no familiar y potencialmente riesgoso y puede no ser seguro de abrir.
+unblockTip=Puede buscar una fuente de descarga alternativa o intentar bajar el archivo nuevamente más tarde.
+unblockButtonContinue=Desbloquear de todas maneras
+unblockButtonCancel=Mantenerme seguro
+
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
 sizeWithUnits=%1$S %2$S
