--- a/es-CL/dom/chrome/security/security.properties
+++ b/es-CL/dom/chrome/security/security.properties
@@ -9,3 +9,4 @@ InsecureFormActionPasswordsPresent=Campos de contraseña presentes en un formula
 InsecurePasswordsPresentOnIframe=Campos de contraseña presentes en un iframe inseguro (http://). Este es un riesgo de seguridad que permite el robo de las credenciales de inicio de sesión del usuario.
 LoadingMixedActiveContent=Cargando contenido activo mixto (inseguro) en una página segura "%1$S"
 LoadingMixedDisplayContent=Cargando contenido de muestra mixto (inseguro) en una página segura "%1$S"
+BothAllowScriptsAndSameOriginPresent=Un iframe que tiene tanto allow-scripts como allow-same-origin para su atributo de caja de arena, puede remover su caja de arena.
