DOM update 1 for aurora 34

--- a/fy-NL/dom/chrome/dom/dom.properties
+++ b/fy-NL/dom/chrome/dom/dom.properties
@@ -208,3 +208,4 @@ KeyNameZoomWarning=KeyboardEvent.key-wearde “Zoom” is ferâldere en sil omne
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
 KeyNameDeadKeysWarning=KeyboardEvent.key-weardes dy't starte mei “Dead” binne ferâlere en wurde gearfoege ta “Dead". Sjoch https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key foar mear ynformaasje
 ImportXULIntoContentWarning=XUL-noades ymportearjen yn in ynhâldsdokumint wurdt net mear stipe. Dizze funksjonaliteit sil ynkoarten ferwidere wurde.
+XMLDocumentLoadPrincipalMismatch=Gebrûk fan document.load is ferbean troch dokuminten út oare finsters. Allinnich it finster yn hokker it dokumint makke is mei call.load oanroppen wurde foar dat dokumint. Brûk yn stee dêrfan leaver XMLHttpRequest.
