--- a/fy-NL/dom/chrome/security/csp.properties
+++ b/fy-NL/dom/chrome/security/csp.properties
@@ -65,6 +65,9 @@ scriptFromStringBlocked = In mooglikheid om JavaScript fanút in string oan te r
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = Ynterpreteart %1$S as in hostnamme, net as in kaaiwurd. As jo in kaaiwurd bedoele, brûk '%2$S' (tusken inkele oanheltekens).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = Rjochtline '%1$S' wurdt net stipe. Rjochtline en weardes wurde negearre.
 
 # CSP Errors:
 policyURINotAlone = policy-uri rjochtline kin allinnich sels ferskine
