--- a/fy-NL/dom/chrome/accessibility/AccessFu.properties
+++ b/fy-NL/dom/chrome/accessibility/AccessFu.properties
@@ -1,6 +1,7 @@
-# This Source Code Form is subject to the terms of the Mozilla Public
+ # This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at http://mozilla.org/MPL/2.0/.
+
 
 # Screen reader started/stopped
 screenReaderStarted = Skermlêzer starte
@@ -14,56 +15,56 @@ alert          =       warskôging
 menupopup      =       menu-pop-up
 document       =       dokumint
 pane           =       finster
-dialog         =       dialooch
+dialog         =       dialoochfinster
 separator      =       skiedingsteken
 toolbar        =       wurkbalke
 statusbar      =       steatbalke
 table          =       tabel
 columnheader   =       kolomtitel
-rowheader      =       rigetitel
+rowheader      =       rigekoptekst
 column         =       kolom
 row            =       rige
 cell           =       sel
 link           =       keppeling
 list           =       list
 listitem       =       listitem
-outline        =       outline
-outlineitem    =       outline-item
-pagetab        =       sideljepblêd
+outline        =       omtrek
+outlineitem    =       omtrekitem
+pagetab        =       ljepblêd
 propertypage   =       eigenkippenside
 graphic        =       grafysk
-pushbutton     =       knop
+pushbutton     =       drukknop
 checkbutton    =       seleksjeknop
-radiobutton    =       karrûndsjes
+radiobutton    =       karrûndsje
 combobox       =       karlist
 progressbar    =       foartgongsbalke
-slider         =       skow
-spinbutton     =       spinknop
+slider         =       skowbalke
+spinbutton     =       kringfjildknop
 diagram        =       diagram
 animation      =       animaasje
 equation       =       fergeliking
 buttonmenu     =       knoppenmenu
-whitespace     =       spaasje
-pagetablist    =       sideljepblêdlist
+whitespace     =       wytromte
+pagetablist    =       ljepblêdlist
 canvas         =       kanvas
-checkmenuitem  =       seleksje menu-item
+checkmenuitem  =       seleksjemenu-item
 label          =       label
 passwordtext   =       wachtwurdtekst
-radiomenuitem  =       radkarrûndsjes menu-item
+radiomenuitem  =       karrûndsjes menu-item
 textcontainer  =       tekstkontener
 togglebutton   =       wikselknop
-treetable      =       bommtabel
-header         =       kop
-footer         =       foet
+treetable      =       struktuertabel
+header         =       koptekst
+footer         =       foettekst
 paragraph      =       paragraaf
-entry          =       yngong
+entry          =       ynfier
 caption        =       byskrift
 heading        =       kop
 section        =       seksje
 form           =       formulier
-comboboxlist   =       karlist list
+comboboxlist   =       karlist
 comboboxoption =       karlistopsje
-imagemap       =       ôfbyldingsmap
+imagemap       =       ôfbylding mei keppeling
 listboxoption  =       karlistopsje
 listbox        =       karlist
 flatequation   =       platte fergeliking
@@ -94,11 +95,10 @@ listEnd        =       Lêste item
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount  =       1 item;#1 items
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S %2$S fan %3$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
+objItemOfN      =       %1$S fan %2$S
 
 # Landmark announcements
 banner         =       banner
@@ -108,17 +108,14 @@ main           =       haad
 navigation     =       navigaasje
 search         =       sykje
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S mei %S en %S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 kolom;#1 kolommen
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+tblColumnInfo = mei 1 kolom;mei #1 kolommen
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 rige;#1 rigen
+tblRowInfo = en 1 rige;en #1 rigen
 
 # table or grid cell information
 columnInfo = Kolom %S
@@ -135,12 +132,12 @@ selectAction   =      selektearre
 unselectAction =      net selektearre
 openAction     =      iepene
 closeAction    =      sluten
-switchAction   =      ferwiksele
-clickAction    =      klikt
+switchAction   =      skeakele
+clickAction    =      der op klikt
 collapseAction =      ynklapt
 expandAction   =      útklapt
 activateAction =      aktivearre
-cycleAction    =      sirkel
+cycleAction    =      syklus útfierd
 
 # Live regions
 # 'hidden' will be spoken when something disappears in a live region.
@@ -157,6 +154,7 @@ tabReload      =      werlade
 stateChecked     =    oanfinkt
 stateNotChecked  =    net oanfinkt
 statePressed     =    yndrukt
+# No string for a not pressed toggle button
 stateExpanded    =    utklapt
 stateCollapsed   =    ynklapt
 stateUnavailable =    net beskikber
@@ -189,18 +187,85 @@ quicknav_Table       = Tabellen
 quicknav_Checkbox    = Seleksjefekken
 
 # Shortened role names for braille
-linkAbbr           =       lnk
-pushbuttonAbbr     =       kn
-passwordtextAbbr   =       wachtwdtxt
-imagemapAbbr       =       ôfbmap
-figureAbbr         =       fig
-textareaAbbr       =       txtarea
-tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+menubarAbbr        =       menubalke
+scrollbarAbbr      =       skowbalke
+gripAbbr           =       grep
+alertAbbr          =       warskôging	
+menupopupAbbr      =       menupop-up
+documentAbbr       =       dokumint
+paneAbbr           =       finster
+dialogAbbr         =       dialoochfinster
+separatorAbbr      =       skiedingsteken
+toolbarAbbr        =       wurkbalke
+statusbarAbbr      =       steatbalke
+tableAbbr          =       tabel
+columnheaderAbbr   =       kolomtitel
+rowheaderAbbr      =       rigekoptekst
+columnAbbr         =       kolom
+rowAbbr            =       rige
+cellAbbr           =       sel
+linkAbbr           =       keppeling
+listAbbr           =       list
+listitemAbbr       =       listitem
+outlineAbbr        =       omtrek
+outlineitemAbbr    =       kontoerûnderdiel
+pagetabAbbr        =       ljepblêd
+propertypageAbbr   =       eigenskippenside
+graphicAbbr        =       grafysk
+pushbuttonAbbr     =       drukknop
+checkbuttonAbbr    =       seleksjeknop
+radiobuttonAbbr    =       karrûndsje
+comboboxAbbr       =       karlist
+progressbarAbbr    =       foartgongsbalke
+sliderAbbr         =       skowbalke
+spinbuttonAbbr     =       kringfjildknop
+diagramAbbr        =       diagram
+animationAbbr      =       animaasje
+equationAbbr       =       fergeliking
+buttonmenuAbbr     =       knoppenmenu
+whitespaceAbbr     =       wytromte
+pagetablistAbbr    =       ljepblêdlist
+canvasAbbr         =       kanvas
+checkmenuitemAbbr  =       seleksjemenu-item
+labelAbbr          =       label
+passwordtextAbbr   =       wachtwurdtekst
+radiomenuitemAbbr  =       karrûndsjesmenu-item
+textcontainerAbbr  =       tekstkontener
+togglebuttonAbbr   =       wikselknop
+treetableAbbr      =       struktuertabel
+headerAbbr         =       koptekst
+footerAbbr         =       foettekst
+paragraphAbbr      =       alinea
+entryAbbr          =       ynfier
+captionAbbr        =       byskrift
+headingAbbr        =       kop
+sectionAbbr        =       seksje
+formAbbr           =       formulier
+comboboxlistAbbr   =       karlist
+comboboxoptionAbbr =       karlistopsje
+imagemapAbbr       =       ôfbylding mei keppelingen
+listboxoptionAbbr  =       opsje
+listboxAbbr        =       karlist
+flatequationAbbr   =       platte fergeliking
+gridcellAbbr       =       rastersel
+noteAbbr           =       noat
+figureAbbr         =       figuer
+definitionlistAbbr =       definysjelist
+termAbbr           =       term
+definitionAbbr     =       definysje
+textareaAbbr       =       tekstgebiet
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1c;#1c
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1k;#1k
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r
-cellInfoAbbr = c%Sr%S
+tblRowInfoAbbr = #1r;#1r
+cellInfoAbbr = k%Sr%S
+
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
