security update 1 for aurora 34

--- a/fy-NL/security/manager/chrome/pippki/pippki.properties
+++ b/fy-NL/security/manager/chrome/pippki/pippki.properties
@@ -133,18 +133,15 @@ importCACertsPrompt=Bestân mei te ymportearjen CA-sertifikaten selektearje
 importServerCertPrompt=Bestân mei te ymportearjen websteesertifikaat selektearje
 file_browse_Certificate_spec=Sertifikaatbestannen
 
-# Form Signing confirmation prompt
-formSigningIntro=It webstee ‘%S’ hat jo fersocht it folgjende tekstberjocht te ûndertekenjen:
-
 # Cert export
-SaveCertAs=Bewarje Sertifikaat Nei Bestân
+SaveCertAs=Bewarje sertifikaat nei bestân
 CertFormatBase64=X.509 Sertifikaat (PEM)
 CertFormatBase64Chain=X.509 Sertifikaat mei ketting (PEM)
 CertFormatDER=X.509 Sertifikaat (DER)
 CertFormatPKCS7=X.509 Sertifikaat (PKCS#7)
 CertFormatPKCS7Chain=X.509 Sertifikaat mei ketting (PKCS#7)
 writeFileFailure=Bestânsflater
-writeFileFailed=Kin net skruiwe nei bestân %S:\n%S.
+writeFileFailed=Kin net skriuwe nei bestân %S:\n%S.
 writeFileAccessDenied=Tagong wegere
 writeFileIsLocked=Bestân is yn gebrûk
 writeFileNoDeviceSpace=Gjin skiifromte mear
