--- a/fy-NL/security/manager/chrome/pipnss/nsserrors.properties
+++ b/fy-NL/security/manager/chrome/pipnss/nsserrors.properties
@@ -300,3 +300,6 @@ SEC_ERROR_LOCKED_PASSWORD=It wachtwurd is fêstsetten.
 SEC_ERROR_UNKNOWN_PKCS11_ERROR=Unbekende PKCS #11-flater.
 SEC_ERROR_BAD_CRL_DP_URL=Unjildige of net-stipe URL yn CRL-distribúsjepuntennamme.
 SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=It sertifikaat is fersifere mei in ûndertekening dat is útskeakele, omdat it ûnfeilich is.
+MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=De server brûkt kaaipinning (HPKP), mar der kin gjin fertroud sertifikaatketing makke wurde dy't mei de pinset oerienkomt. Skeining fan kaaipinning kin net negearre wurde.
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=De server brûkt in sertifikaat mei in basisbetingst-útwreiding dy't identifisearret as in sertifikaatautoriteit. Foar in korrekt útjûn sertifikaat, soe dit net it gefal wêze moatte.
+MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=De server hat in sertifikaat mei in te lytse kaaigrutte presentearre om in befeilige ferbining te meitsjen.
