toolkit update 1 for aurora 34

--- a/fy-NL/toolkit/chrome/global/aboutSupport.properties
+++ b/fy-NL/toolkit/chrome/global/aboutSupport.properties
@@ -27,8 +27,9 @@ crashesTimeDays=#1 dei lyn;#1 dagen lyn
 # #1 number of pending crash reports
 pendingReports=Alle ûngelokrapporten (ynklusyf #1 ûngelok op wacht yn it opjûne tiidsrak);Alle ûngelokrapporten (ynklusyf #1 ûngelokken op wacht yn it opjûne tiidsrak))
 
-# LOCALIZATION NOTE In the following string, "Direct2D" is a proper noun and should not be translated.
-# Feel free to leave english strings if there are no good translations, these are only used in about:support
+# LOCALIZATION NOTE In the following strings, "Direct2D", "DirectWrite" and "ClearType" 
+# are proper nouns and should not be translated. Feel free to leave english strings if 
+# there are no good translations, these are only used in about:support
 
 # LOCALIZATION NOTE: This can be localized with a more generic term, like
 # "Graphics-accelerated Windows". It describes a number of windows, e.g.:
@@ -63,6 +64,7 @@ clearTypeParametersNotFound = ClearType parameters net fûn
 adapterDescription = Adapter-omskriuwing
 adapterVendorID = Fabrikant-ID
 adapterDeviceID = Adapter-ID
+adapterSubsysID = Subsys-ID
 adapterDrivers = Adapterdrivers
 adapterRAM = Adapter-RAM
 driverVersion = Sjoerprogrammaferzje
@@ -70,6 +72,7 @@ driverDate = Sjoerprogrammadatum
 adapterDescription2 = Adapterbeskriuwing (GPU #2) 
 adapterVendorID2 = Vendor-ID (GPU #2) 
 adapterDeviceID2 = Device-ID (GPU #2)
+adapterSubsysID2 = Subsys-ID (GPU #2)
 adapterDrivers2 = Adapterstjoerprogramma’s (GPU #2)
 adapterRAM2 = Adapter-RAM (GPU #2)
 driverVersion2 = Stjoerprogrammaferzje (GPU #2)
