Bug 752559 - Console warning when sandboxed iframe is used ineffectively

--- a/sk/dom/chrome/security/security.properties
+++ b/sk/dom/chrome/security/security.properties
@@ -13,3 +13,5 @@ InsecureFormActionPasswordsPresent=Polia s heslami sú umiestnené vo formulári
 InsecurePasswordsPresentOnIframe=Polia s heslami sú umiestnené na nezabezpečenom (http://) rámci iframe. Toto je bezpečnostné riziko, pretože to umožňuje ukradnúť prihlasovacie údaje používateľa.
 LoadingMixedActiveContent=Načítava sa zmiešaný (nezabezpečený) aktívny obsah na zabezpečenej stránke "%1$S"
 LoadingMixedDisplayContent=Načítava sa zmiešaný (nezabezpečený) obsah na zobrazenie na zabezpečenej stránke "%1$S"
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=iframe, ktorý má pre svoj atribút sandbox nastavené allow-scripts a allow-same-origin, môže odstrániť svoj sandboxing.
