Bug 1047428 - [AccessFu] Report read only state for editables

--- a/sk/dom/chrome/accessibility/AccessFu.properties
+++ b/sk/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    stlačené
 stateExpanded    =    rozbalené
 stateCollapsed   =    zbalené
 stateUnavailable =    nedostupné
+stateReadonly    =    len na čítanie
 stateRequired    =    vyžadované
 stateTraversed   =    navštívené
 stateHasPopup    =    má vyskakovacie okno
