Bug 1059021: Added sign in/up link to the Loop panel footer

--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -67,3 +67,5 @@ share_email_body2=Kliknutím na tento odkaz mi môžete zavolať:\r\n\r\n{{callU
 share_button=Odoslať e-mailom
 copy_url_button=Skopírovať
 copied_url_button=Skopírované!
+
+panel_footer_signin_or_signup_link=Zaregistrujte alebo prihláste sa
