Bug 1060459 - Change "How was your call experience?" to "How was your conversation?"

--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -43,7 +43,7 @@ legal_text_and_links2=Používaním tohto produktu vyjadrujete súhlas s {{terms
 legal_text_tos = Podmienkami používania
 legal_text_privacy = Zásadami ochrany súkromia
 
-feedback_call_experience_heading=Aký je váš zážitok z hovoru?
+feedback_call_experience_heading2=Aký bol váš hovor?
 feedback_what_makes_you_sad=Prečo ste smutný?
 feedback_thank_you_heading=Ďakujeme za vašu spätnú väzbu!
 feedback_category_audio_quality=Kvalita zvuku
