Bug 1060525 - Various string changes for Loop based on UX feedback

--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -14,12 +14,13 @@ unable_retrieve_url=Ospravedlňujeme sa, nebolo možné získať adresu hovoru.
 
 # Conversation Window Strings
 
+begin_call_prompt=Pripravený začať hovor?
 incoming_call_title=Prichádzajúci hovor…
 incoming_call=Prichádzajúci hovor
-incoming_call_answer_button=Prijať
-incoming_call_answer_audio_only_tooltip=Prijať len so zvukom
-incoming_call_decline_button=Odmietnuť
-incoming_call_decline_and_block_button=Odmietnuť a zablokovať
+incoming_call_accept_button=Prijať
+incoming_call_accept_audio_only_tooltip=Prijať len so zvukom
+incoming_call_cancel_button=Odmietnuť
+incoming_call_cancel_and_block_button=Odmietnuť a zablokovať
 incoming_call_block_button=Zablokovať
 hangup_button_title=Zavesiť
 hangup_button_caption=Ukončiť hovor
@@ -28,8 +29,9 @@ unmute_local_audio_button_title=Zrušiť stlmenie zvuku
 mute_local_video_button_title=Stlmiť video
 unmute_local_video_button_title=Zrušiť stlmenie videa
 
-peer_ended_conversation2=Osoba, ktorej ste volali, ukončila konverzáciu.
-call_has_ended=Váš hovor bol ukončený.
+peer_ended_conversation2=Osoba, ktorej ste volali, ukončila hovor.
+conversation_has_ended=Váš hovor bol ukončený.
+restart_call=Znova zavolať
 
 cannot_start_call_session_not_ready=Nie je možné začať hovor, relácia nie je pripravená.
 network_disconnected=Pripojenie k sieti bolo náhle prerušené.
@@ -60,10 +62,10 @@ feedback_back_button=Naspäť
 ## In this item, don't translate the part between {{..}}
 feedback_window_will_close_in2=Toto okno bude zavreté o {{countdown}} sekundu;Toto okno bude zavreté o {{countdown}} sekundy;Toto okno bude zavreté o {{countdown}} sekúnd
 
-share_email_subject2=Pozvánka na hovor
-## LOCALIZATION NOTE (share_email_body2): In this item, don't translate the
+share_email_subject3=Váš priateľ Vás pozýva na hovor
+## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body2=Kliknutím na tento odkaz mi môžete zavolať:\r\n\r\n{{callUrl}}
+share_email_body3=Ak chcete prijať túto pozvánku, jednoducho skopírujte alebo kliknite na tento odkaz:\r\n\r\n{{callUrl}}
 share_button=Odoslať e-mailom
 copy_url_button=Skopírovať
 copied_url_button=Skopírované!
