Bug 1047144: Add a gear menu to the Loop panel

--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -75,3 +75,9 @@ copy_url_button=Skopírovať
 copied_url_button=Skopírované!
 
 panel_footer_signin_or_signup_link=Zaregistrujte alebo prihláste sa
+
+settings_menu_item_account=Účet
+settings_menu_item_settings=Nastavenia
+settings_menu_item_signout=Odhlásiť sa
+settings_menu_item_signin=Prihlásiť sa
+settings_menu_button_tooltip=Nastavenia
